# vtb-atm-app

./: data_dep.ipynb  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ru/dynamical_lr/vtb_atm_app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/dynamical_lr/vtb_atm_app/: MainActivity.kt
app/src/main/java/ru/dynamical_lr/vtb_atm_app/adapters/: CardsAdapter.kt
app/src/main/java/ru/dynamical_lr/vtb_atm_app/models/: AtmModel.kt  Capability.kt  CardInfo.kt  OfficeModel.kt  RouteNode.kt  ServicesModel.kt
app/src/main/java/ru/dynamical_lr/vtb_atm_app/network/api/: AtmAPI.kt
app/src/main/java/ru/dynamical_lr/vtb_atm_app/requests/: RouteRequest.kt
app/src/main/res/drawable/: rounded_corners.xml  rounded_corners_card.xml  vtb_geopoint.xml  vtb_logo.xml  vtb_logo_tilted.xml  vtb_marker.xml
app/src/main/res/font/: vtb_font_family.xml
app/src/main/res/layout/: activity_main.xml  atm_card.xml  bottom_sheet_layout.xml  chip_selector.xml  chip_selector1.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/dynamical_lr/vtb_atm_app/: ExampleUnitTest.kt
backend/: .env  Cargo.toml  shell.nix
backend/src/: domain.rs  main.rs  service.rs
backend/src/model/: atm.rs  mod.rs  office.rs  page.rs  route.rs
gradle/wrapper/: gradle-wrapper.properties
routing/: Dockerfile-db  docker-compose.yml  load_atms_to_psql.py  parse_tags.py  shell.nix
yandex_review_parser/: parser.py
